--- a/LeafDoctor.ipynb
+++ b/LeafDoctor.ipynb
@@ -1868,7 +1868,7 @@
       "outputs": [],
       "source": [
         "import os\n",
-        "NGROK_AUTH_TOKEN = \"32izPqpN402W8sFZ5g6uCUN6lIU_51fzxoEUYSiMjmahVssng\"\n",
+        "NGROK_AUTH_TOKEN = \"YOUR_API_KEY\"\n",
         "ngrok.set_auth_token(NGROK_AUTH_TOKEN)"
       ]
     },
